# StrassenAlgorithm

./: .gitignore  CMakeLists.txt
project/include/: StrassenAlgorithm.h
project/src/: StrassenAlgorithm.cpp  main.cpp
